fixing overflow (i hope)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,7 +14,7 @@ body{
     width: 100vw;
     height: 100vh;
     border: 40px solid $base;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1{
@@ -153,7 +153,7 @@ p{
     background-color: #0A8754;
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     position: absolute;
-    bottom: -100px;
+    bottom: 10px;
     left:-100px;
     z-index: -1;
     animation: 30s  0s linear infinite movimento-three;
@@ -171,13 +171,23 @@ p{
 
 // media queries
 @media only screen and (min-width: 800px){
-    .figure-one{
-        height: 400px;
-        width: 400px;
+    body{
+        overflow: hidden;
     }
-
+    
     p.bio{
         margin:0 20px 0 0;
         align-self: end;
     }
+
+    .figure-one{
+        height: 400px;
+        width: 400px;
+    }
+    .figure-three{
+    position: absolute;
+    bottom: -100px;
+    left:-100px;
+}
+
 }
